# python_ci_cd_test

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml
src/: __init__.py  calculator.py  utils.py
tests/: test_calculator.py  test_utils.py
