[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "python-ci-cd-test"
version = "0.1.0"
description = "A demo project to test Python CI/CD with GitHub Actions"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
