# =============================================================================
# 构建系统配置
# =============================================================================
[build-system]
# 构建这个项目需要的依赖（构建时自动安装）
# setuptools: Python 的打包工具，用于将代码打包成可安装的格式
# wheel: 构建 wheel 格式的分发包（.whl 文件，比源码包更快安装）
requires = ["setuptools>=68.0", "wheel"]

# 指定构建后端（告诉 Python 用什么工具来构建这个项目）
# setuptools.build_meta: 使用 setuptools 作为构建后端
build-backend = "setuptools.build_meta"

# =============================================================================
# 项目元数据
# =============================================================================
[project]
# 项目名称（发布到 PyPI 时使用的名字）
name = "python-ci-cd-test"

# 项目版本号（遵循语义化版本规范：主版本.次版本.修订号）
version = "0.1.0"

# 项目描述（简短说明这个项目是做什么的）
description = "A demo project to test Python CI/CD with GitHub Actions"

# 项目需要的最低 Python 版本（低于此版本无法安装）
requires-python = ">=3.11"

# 项目许可证（声明项目的开源协议）
license = {text = "MIT"}

# =============================================================================
# 可选依赖（额外功能需要的依赖）
# =============================================================================
[project.optional-dependencies]
# dev 组：开发时需要的工具（不会在安装项目时自动安装，需要手动指定）
# 安装方式:pip install -e ".[dev]" 或 uv sync --all-extras --dev
dev = [
    # pytest: Python 测试框架，用于编写和运行单元测试
    "pytest>=7.0",

    # pytest-cov: pytest 插件，生成代码覆盖率报告（哪些代码被测试覆盖了）
    "pytest-cov>=4.0",

    # flake8: 代码静态检查工具，检查语法错误、未使用的导入等问题
    "flake8>=6.0",

    # black: 代码格式化工具，自动统一代码风格（缩进、引号、行长度等）
    "black>=23.0",

    # isort: 自动排序 import 语句（按标准库、第三方库、本地模块分组）
    "isort>=5.0",

    # mypy: 静态类型检查工具，检查类型注解是否正确
    "mypy>=1.0",

    # pre-commit: 在 git commit 之前自动运行代码检查和格式化工具
    "pre-commit>=3.0",
]

# =============================================================================
# Black 配置（代码格式化工具）
# =============================================================================
[tool.black]
# 每行代码的最大长度（超过这个长度会自动换行）
# 88 是 black 的默认值，也是 Python 社区的推荐值
line-length = 88

# =============================================================================
# isort 配置(import 语句排序工具）
# =============================================================================
[tool.isort]
# 使用 black 兼容的配置（确保 isort 和 black 不会产生冲突）
profile = "black"

# 每行 import 语句的最大长度（与 black 保持一致）
line_length = 88

# =============================================================================
# mypy 配置（类型检查工具）
# =============================================================================
[tool.mypy]
# 目标 Python 版本（告诉 mypy 按哪个版本的标准检查类型）
python_version = "3.11"

# 当函数返回 Any 类型时发出警告(Any 表示"任意类型"，会降低类型安全性）
warn_return_any = true

# 当配置文件中存在未使用的配置项时发出警告
warn_unused_configs = true

# 是否强制要求所有函数都有类型注解(false = 允许没有类型注解的函数）
# 如果设为 true,每个函数都必须写成 def foo(x: int) -> str: 的形式
disallow_untyped_defs = false

# =============================================================================
# pytest 配置（测试框架）
# =============================================================================
[tool.pytest.ini_options]
# 测试文件所在的目录(pytest 只会在这个目录下寻找测试文件）
testpaths = ["tests"]

# Python 路径（告诉 pytest 从哪里导入模块）
# "." 表示项目根目录，这样就可以用 from src import xxx
pythonpath = ["."]
